# axiom-compose

./: README.md  pyproject.toml
.github/workflows/: ci.yml
changelog.d/: any-of-transformation.added.md  monorepo-ci-seam-tests.changed.md  monorepo-jurisdiction-dirs.added.md  real-corpus-ca-snap.added.md  scope-existence-validation.added.md  widen-auto-gate-program-token.fixed.md
docs/: adding-a-program.md  architecture.md  co-snap-synthesis-classification.md  migration-readiness.md
src/axiom_compose/: __init__.py  cli.py  core.py  coverage.py  spec.py  transformations.py
tests/: test_consumer_contract.py  test_core.py  test_corpus_index.py  test_coverage.py  test_monorepo_layout.py  test_real_program_ca_snap.py  test_real_program_oasdi.py  test_scope_validation.py  test_spec.py  test_transformations.py  test_universal_specs.py
tests/fixtures/: co-snap-spec.yaml  ctc-spec.yaml  eitc-spec.yaml  fiit-spec.yaml  ny-snap-spec.yaml  oasdi-wage-tax-spec.yaml  simple-benefit.yaml
tests/golden/: simple-benefit.rulespec.yaml
