[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "axiom-compose"
version = "0.1.0"
description = "Deterministic, program-agnostic RuleSpec composition for Axiom."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
concepts = [
  "axiom-encode @ git+https://github.com/TheAxiomFoundation/axiom-encode.git",
]
dev = [
  "pytest>=8.0",
]

[project.scripts]
axiom-compose = "axiom_compose.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
