[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "axiom-compose"
version = "0.1.0"
description = "Deterministic, program-agnostic RuleSpec composition for Axiom."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
concepts = [
  "axiom-encode @ git+https://github.com/TheAxiomFoundation/axiom-encode.git",
]
policyengine = [
  "policyengine[us]==4.9.0",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.15.0",
]

[project.scripts]
axiom-compose = "axiom_compose.cli:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
